--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+Babel==1.3
 Django==1.8.1
 amqp==1.4.6
 anyjson==0.3.3
 argparse==1.2.1
+backports.ssl-match-hostname==3.4.0.2
 billiard==3.3.0.20
 celery==3.1.18
+certifi==2015.04.28
 djangorestframework==3.1.1
+flower==0.8.2
+futures==3.0.1
 kombu==3.0.26
 librabbitmq==1.6.1
 pytz==2015.2
+tornado==4.1
 wsgiref==0.1.2
